tests/error/unknown_identifier.ca

testBlock = ->
  print(a)

vm = make_vm(testBlock)
vm.call

assert(vm.has_error)
